@@ -51,8 +51,8 @@ int consumer(IntChanVect &ichannels,FloatChanVect &fchannels,IntChan &xc)
           if (v < 0) ++donecount;
         }
       }
-      afor (std::pair<FloatChanVect::iterator,int> j = std::make_pair(fchannels.begin(),0);
-            j.first != fchannels.end(); ++j.first,++j.second) {
+      priafor (std::pair<FloatChanVect::iterator,int> j = std::make_pair(fchannels.begin(),0);
+               j.first != fchannels.end(); ++j.first,++j.second) {
         j.first->port (double v) {
           plasma::mprintf ("Got a value from port %d:  %f\n",j.second+fbase,v);
           if (v < 0) ++donecount;
